# tissueshift

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  leaderboard-eval.yml
app/: spaces_demo.py
app/api/: routes.py
app/backend/: main.py
benchmarks/: evaluate.py  metrics.py
benchmarks/baselines/: baseline_models.py
benchmarks/leaderboard/: manager.py
cli/: display.py  main.py
configs/: stage1_pretrain.yaml  stage2_finetune.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
dashboard/src/charts/: ChartjsConfig.js
dashboard/src/components/: AnimatedCounter.jsx  ConfidenceBar.jsx  DataFlowLine.jsx  DataTable.jsx  DropdownFilter.jsx  GlowCard.jsx  LoadingSpinner.jsx  MetricCard.jsx  ParticleField.jsx  PulseRing.jsx  RiskBadge.jsx  Sparkline.jsx  SubtypeBadge.jsx
dashboard/src/css/: style.css
dashboard/src/lib/: apiClient.js
dashboard/src/pages/: AIExplainability.jsx  AttentionHeatmaps.jsx  BiomarkerExplorer.jsx  CellGraphNetwork.jsx  ClinicalWorkflow.jsx  CohortAnalytics.jsx  CommandCenter.jsx  Dashboard.jsx  DigitalTwin.jsx  DrugMechanisms.jsx  FederatedStatus.jsx  GenomicConstellation.jsx  KnowledgeGraphView.jsx  MultiOmicsHub.jsx  NCCNNavigator.jsx  PathologyLab.jsx  PatientDetail.jsx  PatientList.jsx  PatientTimeline.jsx  PatientWellness.jsx  PopulationHealth.jsx  Reconstruction3D.jsx  RehabTracker.jsx  ReportGenerator.jsx  Settings.jsx  SlideAnalysis.jsx  SpatialTranscriptomics.jsx  SurvivalPrediction.jsx  TreatmentComparison.jsx  TrialMatcher.jsx  TumorBoard.jsx  TumorMicroenvironment.jsx  UncertaintyView.jsx  VirtualStaining.jsx
dashboard/src/partials/: Header.jsx  Sidebar.jsx  SidebarLinkGroup.jsx
dashboard/src/partials/dashboard/: ActiveTrialsCard.jsx  ModelPerformanceCard.jsx  RecentPatientsCard.jsx  RiskStratificationCard.jsx  SubtypeDistributionCard.jsx  SurvivalCurveCard.jsx  SystemStatusCard.jsx  UncertaintyOverviewCard.jsx
dashboard/src/utils/: ThemeContext.jsx  Transition.jsx  Utils.js
datasets/: __init__.py  base.py  cptac_brca.py  hpa.py  htan.py  tcga_brca.py
datasets/datacards/: cptac_brca.md  tcga_brca.md
docs/: CITATIONS.md  DATA_CARD.md  ETHICS.md  MODEL_CARD.md  data_governance.md  ethics.md  model_card.md
encoders/molecular/: expression_encoder.py
encoders/pathology/: region_tokenizer.py  slide_aggregator.py  uni_encoder.py
encoders/spatial/: graph_encoder.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/atlas/: page.tsx
frontend/src/app/contribute/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/components/: ArchitectureDiagram.tsx  SubtypeRiver.tsx  TissueManifold.tsx
heads/: predictions.py
preprocess/: feature_extract.py  molecular_preprocess.py  region_annotate.py  stain_norm.py  tiling.py
tests/: conftest.py  test_augmentation.py  test_checkpointing.py  test_config.py  test_encoders.py  test_heads.py  test_inference.py  test_metrics.py  test_model.py  test_tracking.py  test_world_model.py
tissueshift/: __init__.py  active_learning.py  adapters.py  biomarker_discovery.py  causal.py  cli.py  config.py  digital_twin.py  federated.py  inference.py  interpretability.py  knowledge_graph.py  multi_resolution.py  report_generator.py  tracking.py  uncertainty.py
tissueshift/api/: __init__.py  server.py
tissueshift/api/routes/: __init__.py  analysis.py  cohort.py  digital_twin.py  federated.py  knowledge_graph.py  patients.py  predictions.py  reports.py
tissueshift/app/: __init__.py  atlas.py
tissueshift/benchmarks/: __init__.py  baselines.py  evaluator.py
tissueshift/dashboard/: __init__.py  app.py  components.py
tissueshift/datasets/: __init__.py  cptac_brca.py  geo_progression.py  hpa.py  htan.py  multimodal.py  progression_pairs.py  tcga_brca.py
tissueshift/encoders/: __init__.py  molecular_encoder.py  pathology_encoder.py  spatial_encoder.py
tissueshift/heads/: __init__.py  drift_head.py  microenvironment_head.py  morphology_bridge.py  progression_head.py  subtype_head.py  survival_head.py
tissueshift/preprocess/: __init__.py  augmentation.py  feature_harmonization.py  graph_builder.py  stain_normalization.py  tile_extraction.py
tissueshift/training/: __init__.py  checkpointing.py  distributed.py  losses.py  trainer.py
tissueshift/world_model/: __init__.py  neural_ode.py  tissue_state_model.py  tissueshift_model.py  transition_model.py
training/: losses.py  train.py
world_model/: fusion.py  manifold.py  tissue_state.py  transition.py
