[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tissueshift"
version = "0.1.0"
description = "Open Temporal Histopathology-to-Omics Model for Subtype Emergence and Progression in Breast Cancer"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "TissueShift Contributors" }]
keywords = ["breast-cancer", "computational-pathology", "multimodal", "subtype", "progression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.12",
    "monai>=1.3.0",
    "tiatoolbox>=1.5.0",
    "torch-geometric>=2.4.0",
    "scikit-survival>=0.22.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "huggingface-hub>=0.20.0",
    "openslide-python>=1.3.1",
    "h5py>=3.10.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    "gseapy>=1.1.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.27.0",
    "jupyterlab>=4.0.0",
]
idc = [
    "idc-index>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/tissueshift/tissueshift"
Documentation = "https://github.com/tissueshift/tissueshift/tree/main/docs"
Repository = "https://github.com/tissueshift/tissueshift"
Issues = "https://github.com/tissueshift/tissueshift/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["tissueshift"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["datasets", "preprocess", "encoders", "world_model", "heads", "benchmarks", "training"]
